# OpenCLsamples

./: README.md
DeviceInfo/: CMakeLists.txt  main.c
ImageProcess/: CMakeLists.txt  image.cl  main.cpp
SimpleProject/: CMakeLists.txt  main.c
SimpleProjectExternalKernel/: CMakeLists.txt  example.cl  main.c
